# django-boost

./: .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  mypy.ini  pyproject.toml  setup.py  tox.ini
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  auto-release.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  question.md  task.md
.github/workflows/: codeql-analysis.yml  release.yml  test.yml
config/: settings.py  urls.py
django_boost/: __init__.py  admin.py  apps.py  checks.py  context_processors.py  shortcuts.py  tests.py  urls.py  user_agents.py  validators.py
django_boost/admin/: __init__.py  actions.py  filters.py  mixins.py  sites.py
django_boost/admin_tools/: __init__.py  apps.py
django_boost/app/: settings.py
django_boost/contrib/: __init__.py
django_boost/core/: __init__.py  management.py
django_boost/coverage/: urls.py
django_boost/db/: __init__.py  router.py
django_boost/forms/: __init__.py  fields.py  mixins.py  widgets.py
django_boost/http/: __init__.py  response.py
django_boost/management/: __init__.py  mixins.py  templates.py
django_boost/middleware/: __init__.py  html.py
django_boost/migrations/: 0001_initial.py  0002_auto_20191003_0518.py  0003_alter_emailuser_first_name.py  __init__.py
django_boost/models/: __init__.py  deletion.py  fields.py  manager.py  mixins.py  query.py
django_boost/template/: __init__.py  base.py
docs/: admin_site_utilities.rst  admin_site_utilitys.rst  checks.rst  commands.rst  conf.py  custom_user.rst  form.rst  form_fields.rst  form_mixins.rst  generic_views.rst  http_status_code_exceptions.rst  index.rst  installation_instructions.rst  middleware.rst  model_fields.rst  model_mixins.rst  multiple_database.rst  path_converters.rst  routing_utilitys.rst  shortcut_functions.rst  template.rst  template_context.rst  template_tags.rst  test.rst  utility_functions.rst  validators.rst  view_mixins.rst
example/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
example/views/: blog.py  (+2 more)
requirements/: base.txt  ci.txt  develop.txt  docs.txt
tests/: apps.py  models.py  requirements.txt
(+360 files in other folders)
